# pellx_monitor-ng

./: .gitignore  Cargo.toml  README.md  pellxd.service
src/: cli.rs  compose.rs  context.rs  defaults.rs  logging.rs  main.rs  message.rs  notify.rs  settings.rs  source.rs  time.rs
src/backend/: batsign.rs  command.rs  mod.rs  println.rs  slack.rs
src/config/: backends.rs  mod.rs  strings.rs
src/notify/: dispatch.rs  mod.rs
src/settings/: backends.rs  mod.rs  strings.rs
