[package]
name = "pellxd"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"
repository = "https://github.com/zorael/pellx_monitor-ng"
authors = [ "jr" ]

[dependencies]
rppal = { version = "0.22" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
confy = { version = "2.0", default-features = false, features = ["toml_conf"] }
humantime = { version = "2.3", default-features = false }
humantime-serde = { version = "1.1", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
users = { version = "0.11", default-features = false }
ureq = { version = "3", default-features = false, features = ["json", "rustls"] }
